Fix input margin on mobile screen

--- a/nexaas-app/app/assets/scss/base/_overrides.scss
+++ b/nexaas-app/app/assets/scss/base/_overrides.scss
@@ -26,3 +26,9 @@
   margin-top: .3rem;
   margin-bottom: 0;
 }
+
+@media only screen and (max-width: 767px) {
+  .ui.form .fields .field {
+    margin: 0 0 1em;
+  }
+}
